<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    tools:context="com.example.jeff.move4klant.EditUserInfoActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llTitle">

            <TextView
                android:text="@string/editUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llTitle"
            android:weightSum="1.0"
            android:id="@+id/llProfilePicture">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:src="@drawable/emptyprofile"
                android:id="@+id/ivProfileImageEdit"
                android:onClick="onClick"
                android:layout_weight=".3" />

        </LinearLayout> // picture

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llProfilePicture"
            android:weightSum="1.0"
            android:id="@+id/linearLayoutName"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/labelName"
                android:layout_weight=".3"
                android:textSize="16dp"
                android:textIsSelectable="false" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="#CCCCCC"
                android:background="@drawable/textfield"
                android:id="@+id/etName"/>
        </LinearLayout> // name

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutName"
            android:id="@+id/linearLayoutLastName"
            android:weightSum="1.0"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/labelLastName"
                android:textSize="16dp"
                android:layout_weight=".3"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:background="@drawable/textfield"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="#CCCCCC"
                android:id="@+id/etLastName"/>
        </LinearLayout> // last name

        <!--<LinearLayout-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/linearLayoutLastName"-->
            <!--android:id="@+id/linearLayoutAddress"-->
            <!--android:weightSum="1.0"-->
            <!--android:layout_marginTop="4dp"-->
            <!--android:layout_marginBottom="4dp">-->
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="16dp"-->
                <!--android:text="@string/labelAddress"-->
                <!--android:layout_weight=".3"/>-->
            <!--<EditText-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight=".7"-->
                <!--android:id="@+id/etStreet"/>-->
        <!--</LinearLayout> // street-->

        <!--<LinearLayout-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/linearLayoutAddress"-->
            <!--android:id="@+id/linearLayoutHouseNumber"-->
            <!--android:weightSum="1.0"-->
            <!--android:layout_marginTop="4dp"-->
            <!--android:layout_marginBottom="4dp">-->
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/labelHouseNumber"-->
                <!--android:textSize="16dp"-->
                <!--android:layout_weight=".3"-->
                <!--android:layout_gravity="left|center_vertical"-->
                <!--/>-->
            <!--<EditText-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight=".7"-->
                <!--android:id="@+id/etHouseNumber"/>-->
        <!--</LinearLayout> // houseNumber-->

        <!--<LinearLayout-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/linearLayoutAddress"-->
            <!--android:id="@+id/linearLayoutPostalCode"-->
            <!--android:weightSum="1.0"-->
            <!--android:layout_marginTop="4dp"-->
            <!--android:layout_marginBottom="4dp">-->
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/labelPostalCode"-->
                <!--android:textSize="16dp"-->
                <!--android:layout_weight=".3"/>-->
            <!--<EditText-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight=".7"-->
                <!--android:id="@+id/etPostalCode"/>-->
        <!--</LinearLayout> // postal code-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etLastName"
            android:weightSum="1.0"
            android:id="@+id/linearLayoutEmail"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/labelEmail"
                android:layout_weight=".3"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:background="@drawable/textfield"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="#CCCCCC"
                android:id="@+id/etEmail"/>
        </LinearLayout> // email

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmail"
            android:weightSum="1.0"
            android:id="@+id/linearLayouttitlePassword"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/titlePassword"
                android:layout_weight=".3"/>
        </LinearLayout> // titel wachtwoord

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutEmail"
        android:id="@+id/linearLayoutOldPassword"
        android:weightSum="1.0"
        android:layout_marginBottom="4dp"
            android:orientation="vertical">
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/oldPassword"
        android:layout_weight=".3"/>
        <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:background="@drawable/textfield"
        android:paddingLeft="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="#CCCCCC"
        android:id="@+id/etOldPassword"
            android:inputType="textPassword" />
        </LinearLayout> // oud wachtwoord

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutOldPassword"
            android:id="@+id/linearLayoutNewPassword"
            android:weightSum="1.0"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/newPassword"
                android:layout_weight=".3"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:background="@drawable/textfield"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="#CCCCCC"
                android:id="@+id/etNewPassword"
                android:inputType="textPassword" />
        </LinearLayout> // nieuw wachtwoord

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutNewPassword"
            android:id="@+id/linearLayoutNewRepeat"
            android:weightSum="1.0"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/repeatPassword"
                android:layout_weight=".3"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:background="@drawable/textfield"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="#CCCCCC"
                android:id="@+id/etRepeatPassword"
                android:inputType="textPassword" />
        </LinearLayout> // herhaal wachtwoord

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutEmail"
            android:orientation="horizontal"
            android:layout_weight="1.0"
            android:id="@+id/linearLayoutCategoryTitle"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/llPreferences"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_Category"
                    android:textSize="25dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/llChangePreferences"
                android:gravity="end">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btChangeCategory"
                    android:text="@string/changeCategory"
                    android:textSize="14dp"
                    android:layout_marginRight="10dp"
                    android:onClick="onClick"
                    android:background="@android:color/transparent" />
            </LinearLayout>

        </LinearLayout> // interesses

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutCategoryTitle"
            android:weightSum="1.0"
            android:id="@+id/linearLayoutTable"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tableViewCategory_EditUserInfo">
                </TableLayout>

        </LinearLayout> // table categories

    </LinearLayout>
</ScrollView>
